--- a/archivos/ejemplo1/indexcorregido.html
+++ b/archivos/ejemplo1/indexcorregido.html
@@ -21,6 +21,7 @@
                     <a href="#">Acerca de</a>
                     <a href="#">Trabajos</a>
                     <a href="#">Contactanos</a>
+                    <a href="/index.html">Regresar</a>
                 </nav>
             </div>
             <div class="contenedortexto">
@@ -147,6 +148,7 @@
                 <a class="github" href="#"><i class="fa fa-github"></i></a>
             </div>
         </section>
+
     </footer>
     <!-- Fin del footer -->
 </body>
