--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Armando Enrique Kaneko Diaz - Proyectos Web</h1>
+    <ul>
+        <li><a href="archivos/ejemplo1/indexcorregido.html" target="_parent">Ejemplo 1</a></li>
+        <li><a href="#">Ejemplo 2</a></li>
+        <li><a href="#">Laboratorio 1</a></li>
+        <li><a href="#">Laboratorio 2</a></li>
+        <li><a href="#">Laboratorio 3</a></li>
+    </ul>
 </body>
 </html>
