--- a/archivos/laboratorio02/cv.html
+++ b/archivos/laboratorio02/cv.html
@@ -69,5 +69,7 @@
     <p align="center"><a href="index.html">Regresar</a></p>
     </footer>
     </div>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
