--- a/archivos/laboratorio02/pagina15.html
+++ b/archivos/laboratorio02/pagina15.html
@@ -54,5 +54,7 @@
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id aliquam possimus eius laudantium, libero temporibus ad eveniet recusandae aliquid quos dolorum odio veritatis, fuga natus adipisci quasi cumque provident velit.
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum cumque totam, fugiat eveniet qui veritatis obcaecati soluta nemo delectus voluptas sed. Molestiae accusamus libero autem ratione dicta quos pariatur eveniet.
     </p>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
