--- a/archivos/laboratorio02/pagina16.html
+++ b/archivos/laboratorio02/pagina16.html
@@ -102,5 +102,7 @@
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est, corrupti maiores. Eveniet magni porro iure animi odio dolor dolorem vitae saepe quasi qui, voluptatum, nesciunt harum cumque quae molestias aliquid.
     </p>
     <a href="#menu">Regresar al Menu</a>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
