--- a/archivos/laboratorio02/pagina19.html
+++ b/archivos/laboratorio02/pagina19.html
@@ -48,5 +48,7 @@
         Boton: <button>Este es un boton</button>
     </fieldset>
     </form>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
