--- a/archivos/laboratorio02/pagina23.html
+++ b/archivos/laboratorio02/pagina23.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Mensaje de Recepción</h1>
     <h2>Se registro de forma correcta los datos del alumno</h2>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
