--- a/archivos/laboratorio02/pagina7.html
+++ b/archivos/laboratorio02/pagina7.html
@@ -17,5 +17,7 @@
     </ul>
     <hr>
     <p align="center"><a href="index.html">Regresar</a></p>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
