--- a/archivos/laboratorio03/pagina1.html
+++ b/archivos/laboratorio03/pagina1.html
@@ -14,5 +14,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas laboriosam perspiciatis excepturi veniam, magni sapiente nostrum doloremque cupiditate inventore fuga ex temporibus aperiam quibusdam, ipsam incidunt magnam aspernatur! Magni, nihil.
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, at commodi modi consequatur dolores corporis magnam distinctio doloribus recusandae ipsam consectetur ratione quos exercitationem, incidunt sequi corrupti! Tenetur, ducimus illo!
     </p>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
