--- a/archivos/laboratorio03/pagina14.html
+++ b/archivos/laboratorio03/pagina14.html
@@ -104,5 +104,7 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam vel maiores, consequatur, mollitia sit eum minus iusto necessitatibus eius quia explicabo magnam, nisi modi. Ex magni et mollitia inventore aliquam.
             </div>
     </div>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
