--- a/archivos/laboratorio03/pagina2.html
+++ b/archivos/laboratorio03/pagina2.html
@@ -31,5 +31,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod vel, illo quidem soluta nostrum, quaerat architecto quibusdam vero excepturi tempore dicta deleniti molestias totam provident sit laboriosam eum aliquam dolore.
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam provident earum, quos odit minima sint assumenda voluptatibus, deleniti voluptate, eligendi quaerat temporibus perferendis nihil mollitia facilis sequi voluptatum illum placeat?
     </p>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
