--- a/archivos/laboratorio03/pagina22.html
+++ b/archivos/laboratorio03/pagina22.html
@@ -299,5 +299,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis accusantium architecto corporis quasi perferendis quae, illum asperiores possimus, odit aliquid cumque quod soluta at. Repudiandae neque sit reiciendis nam deserunt?
         </p>
     </div>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
