--- a/archivos/laboratorio03/pagina23.html
+++ b/archivos/laboratorio03/pagina23.html
@@ -32,5 +32,7 @@
     <div class="contenedor2">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste atque, dolore reiciendis excepturi officia aspernatur maxime aliquid soluta nam voluptates laborum molestiae quae culpa nihil! Repellendus sapiente sequi velit dolor!
     </div>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
