--- a/archivos/laboratorio03/pagina25.html
+++ b/archivos/laboratorio03/pagina25.html
@@ -55,6 +55,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum tempora voluptatem vitae nemo nisi, enim quos perferendis! Minima placeat provident, laudantium eveniet maiores nemo. Dolore vero animi asperiores modi voluptatum!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, natus officia, minima, sapiente sed provident laborum magnam quasi totam obcaecati voluptates error commodi. Nobis dicta est architecto neque, voluptas recusandae.
     </div>
-
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
