--- a/archivos/laboratorio03/pagina3.html
+++ b/archivos/laboratorio03/pagina3.html
@@ -15,5 +15,7 @@
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro vel mollitia aperiam dolorem sed iusto magni quae, natus fugit, repellat quaerat maiores asperiores perspiciatis, officiis nobis consequatur et aspernatur laborum.
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea at, deserunt qui, natus asperiores quis ad iure deleniti quae illum modi beatae ullam impedit laudantium similique facere voluptate, omnis aut.
     </p>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
