--- a/archivos/laboratorio02/pagina12.html
+++ b/archivos/laboratorio02/pagina12.html
@@ -30,5 +30,7 @@
             <td colspan="3">C13, C14 y C15</td>
         </tr>
     </table>  
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
