--- a/archivos/laboratorio02/pagina14.html
+++ b/archivos/laboratorio02/pagina14.html
@@ -18,5 +18,7 @@
     <img src="img/html.gif" border="1" alt="Animacion codigo HTML">
     <h3>SVG</h3>
     <img src="img/html.svg" border="15" width="200" height="200" alt="Logo HTML SVG">
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
