--- a/archivos/laboratorio02/pagina18.html
+++ b/archivos/laboratorio02/pagina18.html
@@ -14,5 +14,7 @@
         <!-- aca agregamos todos los controles del Formulario -->
 
     </form>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
