--- a/archivos/laboratorio02/pagina22.html
+++ b/archivos/laboratorio02/pagina22.html
@@ -59,6 +59,7 @@
         <button type="button" name="btnActualizar" id="btnActualizar">Actualizar</button>
         <button type="reset" name="btnEliminar" id="btnEliminar">Eliminar</button>
     </form>
-
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
