--- a/archivos/laboratorio03/pagina11.html
+++ b/archivos/laboratorio03/pagina11.html
@@ -48,5 +48,7 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam minima quidem nobis porro, consectetur laudantium velit sit. In, sapiente. Officia voluptatem et voluptatibus officiis praesentium. Ea sed labore error vitae.
         </div>
     </div>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
