--- a/archivos/laboratorio03/pagina15.html
+++ b/archivos/laboratorio03/pagina15.html
@@ -68,6 +68,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi corporis maxime ipsam et minus amet architecto, molestias placeat tenetur. Magni impedit odio, consequatur sequi minima iste facere hic voluptas quibusdam.
         </p>
     </div>
-    
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
