--- a/archivos/laboratorio03/pagina18.html
+++ b/archivos/laboratorio03/pagina18.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="img/html5ycss3 64x64.ico">
 </head>
 <body>
-    
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
