--- a/archivos/laboratorio03/pagina21.html
+++ b/archivos/laboratorio03/pagina21.html
@@ -58,7 +58,8 @@
                 </tr>
             </tbody>
         </table>
-
     </div>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
