--- a/archivos/laboratorio03/pagina4.html
+++ b/archivos/laboratorio03/pagina4.html
@@ -23,5 +23,7 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus odit tempore ipsum nulla sed voluptatum iure eum quos ut repudiandae consectetur doloremque molestias et, veniam itaque rerum accusamus magni temporibus?
     </p>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
