--- a/archivos/laboratorio03/pagina7.html
+++ b/archivos/laboratorio03/pagina7.html
@@ -31,5 +31,7 @@
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, voluptatibus consequatur eos id reiciendis omnis magnam hic. Sunt at sequi dignissimos ratione dicta, minima fuga odit accusamus quod quaerat laudantium!
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos perspiciatis, repellendus provident ducimus molestias consequuntur quibusdam modi suscipit debitis corrupti alias quam necessitatibus at eaque eius iste cumque laudantium saepe?
     </p>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
