--- a/archivos/laboratorio03/pagina8.html
+++ b/archivos/laboratorio03/pagina8.html
@@ -129,5 +129,7 @@
         </div>
         <div id="pie">Es el pie</div>
     </div>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
