--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armando Enrique Kaneko Diaz - Proyectos Web</title>
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
     <h1>Armando Enrique Kaneko Diaz - Proyectos Web</h1>
     <ul>
+        <li><a href="index.html" class="activo">Inicio</a></li>
         <li><a href="archivos/ejemplo1/indexcorregido.html" target="_parent">Ejemplo 1</a></li>
-        <li><a href="#">Ejemplo 2</a></li>
-        <li><a href="#">Laboratorio 1</a></li>
-        <li><a href="#">Laboratorio 2</a></li>
-        <li><a href="#">Laboratorio 3</a></li>
+        <li><a href="archivos/ejemplo2/index.html">Ejemplo 2</a></li>
+        <li><a href="archivos/laboratorio01/index.html">Laboratorio 1</a></li>
+        <li><a href="archivos/laboratorio02/index.html">Laboratorio 2</a></li>
+        <li><a href="archivos/laboratorio03/index.html">Laboratorio 3</a></li>
     </ul>
 </body>
 </html>
