--- a/archivos/curso-javascript/laboratorio01/js/ejemplo2.html
+++ b/archivos/curso-javascript/laboratorio01/js/ejemplo2.html
@@ -13,6 +13,7 @@
     </script>
 </head>
 <body>
-    
+    <hr>
+    <a href="/archivos/curso-javascript/index.html">Regresar</a>
 </body>
 </html>
