--- a/archivos/laboratorio03/index.html
+++ b/archivos/laboratorio03/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h1>Hojas de Estilo en Cascada</h1>
-    <hr>
+    <hr color=rgb(14,30,83)>
     <h2>Menu Principal</h2>
+    <img class="imagen1" src="/img/HTML - CSS - JS.jpeg">
     <ul>
         <li><a href="index.html" class="activo">Inicio</a></li>
         <li><a href="pagina1.html">Página 1</a></li>
