--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Armando Enrique Kaneko Diaz - Proyectos Web</title>
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <script>
+        alert("Bienvenido, haga clic en aceptar o precione la tecla enter para continuar")
+    </script>
 </head>
 <body>
     <h1>Armando Enrique Kaneko Diaz - Proyectos Web</h1>
+    <img class="imagen1" src="img/HTML - CSS - JS.jpeg">
     <ul>
         <li><a href="index.html" class="activo">Inicio</a></li>
-        <li><a href="archivos/curso-javascript/">Curso de Javascript</a></li>
+        <li><a href="archivos/curso-javascript/index.html">Curso de Javascript</a></li>
         <li><a href="archivos/ejemplo1/indexcorregido.html" target="_parent">Ejemplo 1</a></li>
         <li><a href="archivos/ejemplo2/index.html">Ejemplo 2</a></li>
         <li><a href="archivos/laboratorio01/index.html">Laboratorio 1</a></li>
@@ -19,5 +23,6 @@
         <li><a href="archivos/laboratorio03/index.html">Laboratorio 3</a></li>
         <li><a href="archivos/laboratorio04/index.html">Laboratorio 4</a></li>
     </ul>
+
 </body>
 </html>
