--- a/archivos/curso-javascript/laboratorio02/js/ejemplo1.html
+++ b/archivos/curso-javascript/laboratorio02/js/ejemplo1.html
@@ -24,6 +24,7 @@
     </script>
 </head>
 <body>
-    
+    <hr>
+    <a href="/archivos/curso-javascript/index.html">Regresar</a>
 </body>
 </html>
