--- a/archivos/curso-javascript/laboratorio04/js/ejemplo3.html
+++ b/archivos/curso-javascript/laboratorio04/js/ejemplo3.html
@@ -25,6 +25,7 @@
     </script>
 </head>
 <body>
-    
+    <hr>
+    <a href="/archivos/curso-javascript/index.html">Regresar</a>
 </body>
 </html>
