--- a/archivos/curso-javascript/laboratorio04/js/ejemplo4.html
+++ b/archivos/curso-javascript/laboratorio04/js/ejemplo4.html
@@ -35,6 +35,7 @@
     </script>
 </head>
 <body>
-    
+    <hr>
+    <a href="/archivos/curso-javascript/index.html">Regresar</a>
 </body>
 </html>
