--- a/archivos/laboratorio02/index.html
+++ b/archivos/laboratorio02/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <h1>Bienvenidos al Curso de Diseño y Desarrollo Web</h1>
-    <hr>
+    <hr color=rgb(14,30,83)>
     <h2>Menu Pricipal</h2>
+    <img class="imagen1" src="/img/HTML - CSS - JS.jpeg">
     <ul>
         <li><a href="index.html" class="activo">Inicio</a></li>
         <li><a href="pagina.html">Página</a></li>
