--- a/archivos/laboratorio04/pagina13.html
+++ b/archivos/laboratorio04/pagina13.html
@@ -128,5 +128,7 @@
         <input type="button" onclick="Calcular()" name="btnCalcular" id="btnCalcular" value="Calcular">
         <input type="reset" id="btnLimpiar" name="btnLimpiar" value="Limpiar">
     </form>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
