--- a/archivos/laboratorio04/pagina15.html
+++ b/archivos/laboratorio04/pagina15.html
@@ -61,5 +61,7 @@
         <input type="button" value="Mostrar" id="btnMostrar" name ="btnMostrar" onclick="Mostrar()">
         <input type="reset" value="Limpiar" id="btnLimpiar" name="btnLimpiar">
     </form>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
