--- a/archivos/laboratorio04/pagina18.html
+++ b/archivos/laboratorio04/pagina18.html
@@ -34,5 +34,7 @@
         </form>
     </div>
     <script src="js/biblioteca1.js" type="text/javascript"></script>
+    <hr>
+    <a href="index.html">Regresar</a>
 </body>
 </html>
