--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <ul>
         <li><a href="index.html" class="activo">Inicio</a></li>
         <li><a href="archivos/curso-javascript/index.html">Curso de Javascript</a></li>
-        <li><a href="archivos/ejemplo1/indexcorregido.html" target="_parent">Ejemplo 1</a></li>
-        <li><a href="archivos/ejemplo2/index.html">Ejemplo 2</a></li>
+        <li><a href="archivos/ejemplo 1/indexcorregido.html" target="_parent">Ejemplo 1</a></li>
+        <li><a href="archivos/ejemplo 2/index.html">Ejemplo 2</a></li>
         <li><a href="archivos/laboratorio01/index.html">Laboratorio 1</a></li>
         <li><a href="archivos/laboratorio02/index.html">Laboratorio 2</a></li>
         <li><a href="archivos/laboratorio03/index.html">Laboratorio 3</a></li>
         <li><a href="archivos/laboratorio04/index.html">Laboratorio 4</a></li>
+        <li><a href="archivos/laboratorio05/index.html">Laboratorio 5</a></li>
     </ul>
 
 </body>
